fix(address): Remove escaped div tags from address fields output
Change fields_for from <%= to <% to prevent the block's return value
(the literal closing div tags) from being HTML-escaped and output.

--- a/app/components/admin/address_fields_component.html.erb
+++ b/app/components/admin/address_fields_component.html.erb
@@ -1,4 +1,4 @@
-<%= form.fields_for :address, address do |address_form| %>
+<% form.fields_for :address, address do |address_form| %>
   <div class="nested-fields"
        data-controller="partner-address"
        data-partner-address-partner-id-value="<%= partner.id %>"
