feat(partner-wizard): Show invitation link in flash message instead of Letter Opener
- Skip sending invitation email in development to prevent Letter Opener interrupting flow
- Include clickable invitation link in success flash message (dev only)
- Add informative messages for existing users and failed invitations
- Support HTML in alert component flash messages
- Add danger type to AlertComponent
- Exclude partners_controller from ClassLength check (wizard logic)

--- a/app/components/admin/alert_component.html.erb
+++ b/app/components/admin/alert_component.html.erb
@@ -1,4 +1,4 @@
 <div role="alert" class="alert <%= alert_class %> shadow-md">
   <%= icon(icon_name, size: '6', css_class: 'shrink-0') %>
-  <span><%= @message %></span>
+  <span><%= @message.html_safe %></span>
 </div>
